Get netzbetreiberIds from multiple URL parameters
This allows to collect the IDs within a single QueryParam-annotated
parameter. While at it, save an import by using List.of() instead of
Arrays.asList().